Fixed alignment issues on landing page

--- a/app/assets/stylesheets/bootstrap_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_customization.css.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
 .bdc{
   border: 0px;
-  background-color: #36B1BF
+  background-color: transparent
 }
 .ttp{
   color: #E9F1DF;
