--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -6,18 +6,27 @@
   background-size: 100% auto;
   width: auto;
 }
-.center{
-  margin: auto;
-}
 #welcome{
   display: inline-block;
-  padding: 50px;
+  width: 600px;
+  padding: 25px;
   border-radius: 10px;
+}
+.center{
+  //border: 1px dashed blue;
+  text-align: center;
 }
 .trans{
   background-color: rgba(255,255,255,.8)
 }
-#wel{
-  font: helvetica;
-  padding: 20px;
+.content{
+  //border: 1px dashed red;
+  margin: auto;
+  height: auto;
+  width: 1200px;
+  padding-left: 300px;
+  padding-top: 100px;
+}
+.bt{
+  display: inline-block;
 }
